--- a/style.css
+++ b/style.css
@@ -178,3 +178,69 @@ body{
 .line-1 h2:first-child{
     color: black;
 }
+
+/*  */
+
+.bar-section{
+    width: 100%;
+    height: 80%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+
+    padding: 20px;
+
+    /* background-color: red; */
+}
+
+.bar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    width: 95%;
+    height: 20%;
+
+    background-color: gold;
+
+    margin-top: 12px;
+
+    border-radius: 10px;
+
+    text-align: center;
+
+}
+
+.bar h1, .bar h2{
+    margin: 20px 20px;
+}
+
+.bar img{
+    width: 150px;
+    height: auto;
+
+    object-fit: cover;
+    object-position: center;
+}
+
+.a1{
+    color: black;
+}
+
+.a2{
+    background-color: silver;
+}
+
+.a3{
+    background-color: brown;
+}
+
+.a4{
+    background-color: orange;
+}
+
+.a5{
+    background-color: orange;
+}
